--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   </head>
 <body>
   <h1>I'm rhoppel</h1>
+  <a href="https://github.com">This is a link to GitHub!</a>
   <img src=https://avatars0.githubusercontent.com/u/1000765?v=4>
   <ul>
-    <li>https://techdogs.org/</li>
-    <li>https://docs.techdogs.org/</li>
-    <li>https://hass.hoppel.us/</li>
+    <li><a href="https://techdogs.org/"></a>techdogs.us</li>
+    <li><a href="https://docs.techdogs.org/">docs.techdogs.org</a></li>
+    <li><a href="https://hass.hoppel.us/"></a>HoppelLodge Home Assistant</li>
   </ul>
 </body>
 </html>
